# perfit

./: .envrc  .gitignore  Cargo.toml  README.md  build.rs  flake.nix  justfile.custom
.config/flakebox/: id
.github/workflows/: flakebox-ci.yml
assets/: script.js
nix/modules/: perfitd.nix
src/: asset_cache.rs  db.rs  fragment.rs  lib.rs  main.rs  models.rs  opts.rs  routes.rs  serde.rs  state.rs
src/models/: access_token.rs  ts.rs
src/routes/: account.rs  auth.rs  error.rs  metric.rs  series.rs  token.rs
tests/: common.rs  sanity.rs
tests/snapshots/: sanity__no data points.snap  sanity__one data point.snap  sanity__three data points.snap  sanity__two data point.snap
